# ChangeWallpaperUbuntu

./: README.md  changer.py  parser.py  pyproject.toml
