[tool.poetry]
name = "wallpaperub"
version = "0.1.0"
description = "Change wallpapers on Ubuntu"
authors = ["Greatjudge"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
requests = "^2.25.1"
lxml = "^4.6.3"
pathlib = "^1.0.1"
python-dateutil = "^2.8.1"
pycairo = "^1.20.1"
PyGObject = "^3.40.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
